# HUB

./: .gitignore  ANDROID_IOS_MIGRATION_BACKLOG.md  ANDROID_IOS_PARITY.md  AUTOMATIC_TRANSLATION.md  BACKEND_CONNECTION.md  BACKEND_READY.md  BACKEND_REGION_FIX.md  BACKEND_REGION_FIX_DETAILED.md  BACKEND_TEST_DATA_INITIALIZATION.md  COORDINATE_DEBUG_GUIDE.md  COORDINATE_FIX_SUMMARY.md  EXPLORE_SCREEN_ARCHITECTURE.md  FINAL_FIX.md  FIXES.md  GEO_API_ARCHITECTURE.md  GEO_API_FIXES.md  GEO_API_INTEGRATION.md  GEO_API_QUICK_REFERENCE.md  GEO_API_SUMMARY.md  GOOGLE_MAPS_SETUP.md  GOOGLE_SIGN_IN_SETUP.md  INVENTORY_SYSTEM.md  MIGRATION_TO_MAPKIT.md  OPENSTREETMAP_SETUP.md  PRODUCTION_CHECKLIST.md  QUICK_FIX_500.md  QUICK_START.md  README.md  README_SETUP.md  STATUS.md  TRIPS_BACKEND_REQUIREMENTS.md  TRIPS_MODULE_SUMMARY.md  USERS.md  egypt_dive_sites.json  scrape_egypt_divejourney.py
backend/underwater-vision-module/: .dockerignore  .gitignore  Dockerfile  NOTICE.md  README.md  bootstrap-venv.sh  package.json  pyproject.toml
backend/underwater-vision-module/configs/: default.yaml  samples_manifest.json
backend/underwater-vision-module/scripts/: build_squid_manifest.py  compare_nikolaj_bech_matrix.py  compare_nikolaj_bech_port.py  infer_photo.py  seasplat_smoke.py  train_photo.py
backend/underwater-vision-module/src/underwater_vision_module.egg-info/: SOURCES.txt  requires.txt
backend/underwater-vision-module/src/uvm/: __init__.py  config.py
backend/underwater-vision-module/src/uvm/api/: app.py  image_decode.py  jpeg_utils.py  nn_runtime.py  seasplat_runtime.py  (+2 more)
(+952 files in other folders)
