[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "underwater-vision-module"
version = "0.1.0"
description = "Depth-aware underwater restoration module for photo/video"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "numpy>=1.24,<2",
  "scipy>=1.11",
  "opencv-python-headless>=4.8",
  "pyyaml>=6.0",
  "torch>=2.2",
  "torchvision>=0.17",
  "tqdm>=4.66",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
