[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "underwater-vision-module"
version = "0.2.0"
description = "Underwater photo/video color correction (Nikolaj Bech port) via FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "numpy>=1.26,<2",
  "opencv-python-headless==4.10.0.84",
  "pillow>=10.3,<12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
